--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
     "nodemailer": "^6.7.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
