--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest --verbose --testTimeout=30000",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "engines": {
     "node": "14.x"
@@ -29,7 +29,8 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "twilio": "^3.84.0"
   },
   "devDependencies": {
     "jest": "^27.4.5",
