--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.1142.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "country-state-city": "^3.1.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-flash": "^0.0.2",
