--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@faker-js/faker": "^6.1.1",
     "aws-sdk": "^2.1142.0",
+    "axios": "^1.2.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "country-state-city": "^3.1.2",
