--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.5.1",
+    "stripe": "^12.17.0",
     "twilio": "^4.11.0"
   },
   "devDependencies": {
