--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "method-override": "^3.0.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "nodemailer-sendgrid-transport": "^0.2.0",
